# haskell-practice

./: File.hs  HeteroGenList.hs  basic-types-2.hs  ex1.hs  factorizer.hs  fizzbuzz.hs  pal.hs  palindromes.hs  stupid-math.hs  sumToN.hs
99problems/: 99problems.cabal  package.yaml
applicatives/: applicativeCompose.hs  applicativeMap.hs  applicatives-compose.hs  compose.hs  monoidsInFunctors.hs  parsingParens.hs  readerContext.hs  zippyApplicatives.hs  zips.hs
blog/: Main.hs
bookofmonads/: ChangeLog.md  README.md  bookofmonads.cabal  package.yaml
co/: ChangeLog.md  co.cabal  package.yaml
codecatas/: FizzBuzz.hs  evenOrOdd.hs  getMiddle.hs  gravityFlip.hs  multiply.hs  sequenceNum.hs  squareNums.hs  vowelCount.hs
combinator-calculator/: ChangeLog.md  README.md  combinator-calculator.cabal  package.yaml
fe/: ChangeLog.md  fe.cabal  package.yaml  stack.yaml
functors/: bifunctor-intro.hs  breakingLaws.hs  common-functors.hs  functor-intro.hs  laws-and-orders.hs  more-than-a-sum.hs
generic-lens/: ChangeLog.md  README.md  generic-lens.cabal  package.yaml
http/: http.cabal  package.yaml
idris/: Equal.ibc  Equal.idr
micro-pg/: ChangeLog.md  README.md  micro-pg.cabal  package.yaml
monad-transformers/: monad-transformers.cabal  package.yaml  stack.yaml
nix-tests/: Main.hs  default.nix  (+6 more)
phrasebook/hashing/: README.md  hashing.cabal  stack.yaml
phrasebook/hashing/.stack-work/: stack.sqlite3
phrasebook/hashing/.stack-work/ghci/5b39318f/: cabal_macros.h
phrasebook/hashing/.stack-work/ghci/a46d68c4/: cabal_macros.h
phrasebook/hashing/src/: Main.hs
(+109 files in other folders)
