name:                hashing
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hashable#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hashable
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hashable == 1.3.0.0
                     , cryptonite == 0.27
                     , bytestring == 0.11.0.0
                     , memory == 0.15.0
                     , utf8-string == 1.0.1
